fixed errors not showing up on city errors form

--- a/app/assets/stylesheets/components/session.scss
+++ b/app/assets/stylesheets/components/session.scss
@@ -9,8 +9,11 @@
     // margin: 10px;
 
     h2 {
+        font-size: x-large;
+        font-weight: bolder;
         display: flex;
         justify-content: center;
+        text-align: center;
         margin-bottom: 40px;
         width: 500px;
     }
